--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <title>One Page Portfolio</title>
 
   <!-- Bootstrap -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-theme.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/swiper.min.css">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap-theme.css" rel="stylesheet">
+  <link rel="stylesheet" href="swiper.min.css">
+  <link href="style.css" rel="stylesheet">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Open+Sans:300,400,700" rel="stylesheet">
@@ -55,10 +55,10 @@
                 <a href="#" class="btn btn-lg btn-primary">Know More</a>
                 <ul class="social-links">
                   <li class="label">Join me here</li>
-                  <li><a href="#"><img src="assets/behance.png"></a></li>
-                  <li><a href="#"><img src="assets/dribbble.png"></a></li>
-                  <li><a href="#"><img src="assets/twitter.png"></a></li>
-                  <li><a href="#"><img src="assets/github.png"></a></li>
+                  <li><a href="#"><img src="behance.png"></a></li>
+                  <li><a href="#"><img src="dribbble.png"></a></li>
+                  <li><a href="#"><img src="twitter.png"></a></li>
+                  <li><a href="#"><img src="github.png"></a></li>
                 </ul>
               </div>
             </div>
@@ -76,31 +76,31 @@
               <div class="swiper-container client-swiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide client-box">
-                    <img src="assets/logo-1.png" class="client-logo">
+                    <img src="logo-1.png" class="client-logo">
                     <h3 class="text-left title">Visual identity for upsidedown</h3>
                     <p class="text-left tag">Branding, UI, Website</p>
                     <p class="text-left"><a href="#">Know More &#8594;</a></p>
                   </div>
                   <div class="swiper-slide client-box">
-                    <img src="assets/logo-2.png" class="client-logo">
+                    <img src="logo-2.png" class="client-logo">
                     <h3 class="text-left title">User Experience design for the AI</h3>
                     <p class="text-left tag">Branding, UI, Website</p>
                     <p class="text-left"><a href="#">Know More &#8594;</a></p>
                   </div>
                   <div class="swiper-slide client-box">
-                    <img src="assets/logo-3.png" class="client-logo">
+                    <img src="logo-3.png" class="client-logo">
                     <h3 class="text-left title">Rebranding of the best motion studio</h3>
                     <p class="text-left tag">Branding, UI, Website</p>
                     <p class="text-left"><a href="#">Know More &#8594;</a></p>
                   </div>
                   <div class="swiper-slide client-box">
-                    <img src="assets/logo-1.png" class="client-logo">
+                    <img src="logo-1.png" class="client-logo">
                     <h3 class="text-left title">Visual identity for upsidedown</h3>
                     <p class="text-left tag">Branding, UI, Website</p>
                     <p class="text-left"><a href="#">Know More &#8594;</a></p>
                   </div>
                   <div class="swiper-slide client-box">
-                    <img src="assets/logo-2.png" class="client-logo">
+                    <img src="logo-2.png" class="client-logo">
                     <h3 class="text-left title">Visual identity for upsidedown</h3>
                     <p class="text-left tag">Branding, UI, Website</p>
                     <p class="text-left"><a href="#">Know More &#8594;</a></p>
@@ -229,11 +229,11 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
-              <h1>Let’s talk about your product</h1>
-              <a href="#" class="btn btn-lg btn-primary">Get in touch now</a>
+              <h1>Let’s talk about your project</h1>
+              <a href="https://wa.link/6ynlrx" class="btn btn-lg  btn-primary">Contact me</a>
             </div>
           </div>
-        </div>
+        </div> 
       </section>
 
       <!-- Footer -->
@@ -241,26 +241,26 @@
         <div class="container-fluid">
           <div class="row footer">
             <div class="col-md-12 text-center">
-              <h1>Maria<br><span>Ferrero</span></h1>
+              <h1>Muhammad<br><span>Ahsan</span></h1>
               <ul class="social-links">
-                <li><a href="#"><img src="assets/behance.png"></a></li>
-                <li><a href="#"><img src="assets/dribbble.png"></a></li>
-                <li><a href="#"><img src="assets/twitter.png"></a></li>
-                <li><a href="#"><img src="assets/github.png"></a></li>
+                <li><a href="#"><img src="behance.png"></a></li>
+                <li><a href="#"><img src="dribbble.png"></a></li>
+                <li><a href="#"><img src="twitter.png"></a></li>
+                <li><a href="#"><img src="github.png"></a></li>
               </ul>
             </div>
           </div>
           <div class="row sub-footer">
             <div class="col-md-12 text-center">
-              <p>Designed by <a href="#" target="_blank">@realvjy</a> | Download <a href="http://designerdada.com/free-bootstrap-one-page-portfolio-template/">here</a></p>
+              <p>Designed by <a href="#" target="_blank">Muhammad Ahsan</a></p>
             </div>
           </div>
         </div>
       </footer>
 
       <!-- Some Javascript -->
-      <script src="js/jquery-2.1.1.js"></script>
-      <script src="js/swiper.jquery.min.js"></script>
+      <script src="jquery-2.1.1.js"></script>
+      <script src="swiper.jquery.min.js"></script>
       <!-- Initialize Client Swiper -->
       <script>
       var swiper1 = new Swiper('.client-swiper', {
@@ -317,7 +317,7 @@
       });
       </script>
       <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-      <script src="js/jquery.counterup.min.js"></script>
+      <script src="jquery.counterup.min.js"></script>
       <script>
       // Counterup
       $('.counter').counterUp({
