--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
               <div class="hero-text">
                 <h1><span>Hi, I am</span><br>Muhammad Ahsan.</h1>
                 <h3>Senior Shopify Developer | Liquid Developer | Web Developer</h3>
-                <a href="#" class="btn btn-lg btn-primary">Know More</a>
-                <ul class="social-links">
+                <a href="https://wa.link/6ynlrx" class="btn btn-lg btn-primary">Know More</a>
+<!--                 <ul class="social-links">
                   <li class="label">Join me here</li>
                   <li><a href="#"><img src="behance.png"></a></li>
                   <li><a href="#"><img src="dribbble.png"></a></li>
                   <li><a href="#"><img src="twitter.png"></a></li>
                   <li><a href="#"><img src="github.png"></a></li>
-                </ul>
+                </ul> -->
               </div>
             </div>
           </div>
