--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <div class="hero-text">
                 <h1><span>Hi, I am</span><br>Muhammad Ahsan.</h1>
                 <h3>Senior Shopify Developer | Liquid Developer | Web Developer</h3>
-                <a href="https://wa.link/6ynlrx" class="btn btn-lg btn-primary">Contact me</a>
+                <a href="https://wa.link/6ynlrx" target="_blank" class="btn btn-lg btn-primary">Know More</a>
 <!--                 <ul class="social-links">
                   <li class="label">Join me here</li>
                   <li><a href="#"><img src="behance.png"></a></li>
@@ -242,12 +242,13 @@
           <div class="row footer">
             <div class="col-md-12 text-center">
               <h1>Muhammad<br><span>Ahsan</span></h1>
-              <ul class="social-links">
+              <a href="https://wa.link/6ynlrx" target="_blank" class="btn btn-lg btn-primary">Contact me</a>
+<!--               <ul class="social-links">
                 <li><a href="#"><img src="behance.png"></a></li>
                 <li><a href="#"><img src="dribbble.png"></a></li>
                 <li><a href="#"><img src="twitter.png"></a></li>
                 <li><a href="#"><img src="github.png"></a></li>
-              </ul>
+              </ul> -->
             </div>
           </div>
           <div class="row sub-footer">
