--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
               </nav>
               <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
               <div class="hero-text">
-                <h1><span>Hi, I am</span><br>Muhammad Ahsan.</h1>
-                <h3>Senior Shopify Developer | Liquid Developer | Web Developer</h3>
-                <a href="https://wa.link/6ynlrx" target="_blank" class="btn btn-lg btn-primary">Know More</a>
+                <h1>Connect with top Shopify developer</h1>
+                <h3>Looking for a Senior Shopify Developer | Liquid Developer | Web Developer?</h3>
+                <a href="https://wa.link/6ynlrx" target="_blank" class="btn btn-lg btn-primary">Contact me now</a>
 <!--                 <ul class="social-links">
                   <li class="label">Join me here</li>
                   <li><a href="#"><img src="behance.png"></a></li>
