--- a/index.html
+++ b/index.html
@@ -132,67 +132,24 @@
               <div class="swiper-container testimonial-swiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide testimonial-box yellow">
-                    <h1>Pixel Perfect design</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
+                    <h1>Create a stunning Shopify store</h1>
+                    <p>He helped me create a stunning Shopify store that perfectly represents my brand. Their attention to detail and expertise is unmatched.</p>
                     <div class="text-right">
-                      <p class="name">- John Doe</p>
-                      <p class="designation">Founder, Arrow</p>
+                      <p class="name">- Peter Hill</p>
                     </div>
                   </div>
                   <div class="swiper-slide testimonial-box purple">
-                    <h1>Minimal and Clean</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
+                    <h1>Shopify custom theme development</h1>
+                    <p>Thanks to Muhammad!, my online store is now generating more sales than ever before. I highly recommend their Shopify development services to anyone looking to succeed in e-commerce.</p>
                     <div class="text-right">
                       <p class="name">- Rocky Hych</p>
-                      <p class="designation">CTO, Upside Down</p>
                     </div>
                   </div>
                   <div class="swiper-slide testimonial-box blue">
-                    <h1>Built with Bootstrap</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
+                    <h1>Full Stack Shopify Developer</h1>
+                    <p>Muhammad has made my Shopify development projects a breeze. It's a game-changer for full-stack developers like me.</p>
                     <div class="text-right">
-                      <p class="name">- John Doe</p>
-                      <p class="designation">Founder, Arrow</p>
-                    </div>
-                  </div>
-                  <div class="swiper-slide testimonial-box pink">
-                    <h1>Responsive template</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
-                    <div class="text-right">
-                      <p class="name">- Rocky Hych</p>
-                      <p class="designation">CTO, Upside Down</p>
-                    </div>
-                  </div>
-                  <div class="swiper-slide testimonial-box yellow">
-                    <h1>Pixel Perfect</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
-                    <div class="text-right">
-                      <p class="name">- John Doe</p>
-                      <p class="designation">Founder, Arrow</p>
-                    </div>
-                  </div>
-                  <div class="swiper-slide testimonial-box purple">
-                    <h1>Minimal and Clean</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
-                    <div class="text-right">
-                      <p class="name">- Rocky Hych</p>
-                      <p class="designation">CTO, Upside Down</p>
-                    </div>
-                  </div>
-                  <div class="swiper-slide testimonial-box blue">
-                    <h1>Pixel Perfect</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
-                    <div class="text-right">
-                      <p class="name">- John Doe</p>
-                      <p class="designation">Founder, Arrow</p>
-                    </div>
-                  </div>
-                  <div class="swiper-slide testimonial-box pink">
-                    <h1>Minimal and Clean</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
-                    <div class="text-right">
-                      <p class="name">- Rocky Hych</p>
-                      <p class="designation">CTO, Upside Down</p>
+                      <p class="name">- Adam Parker</p>
                     </div>
                   </div>
                 </div>
@@ -213,12 +170,12 @@
               <h3>Hours</h3>
             </div>
             <div class="col-md-4 text-center stat-box">
-              <h1 class="blue counter">217</h1>
+              <h1 class="blue"><span class="counter">1.8</span>k</h1>
               <h3>Projects</h3>
             </div>
             <div class="col-md-4 text-center stat-box">
-              <h1 class="pink"><span class="counter">18.3</span>k</h1>
-              <h3>Cups of Coffee</h3>
+              <h1 class="pink"><span class="counter">1.2</span>k</h1>
+              <h3>Clients</h3>
             </div>
           </div>
         </div>
@@ -230,7 +187,7 @@
           <div class="row">
             <div class="col-md-12 text-center">
               <h1>Let’s talk about your project</h1>
-              <a href="https://wa.link/6ynlrx" class="btn btn-lg  btn-primary">Contact me</a>
+              <a href="https://wa.link/6ynlrx" class="btn btn-lg  btn-primary">Contact me now</a>
             </div>
           </div>
         </div> 
